assign1/tests/type-checking/bad/types_add-var.c
#include "FenneC.h"

int main() {
    unsigned x = 3;
    return 1 + x;
}